# clap

./: .gitignore  .gitmodules  1.txt  =  CONTRIBUTING.md  MEIYUAN.rviz  README-challenge.md  README.md  bag_capture.py  bagrecord_lid2imu_calibration  bagreplay.sh  bagreplay_perception.sh  bootstrap.sh  bridge098.bash  bridge_highway.bash  bridge_intersection.bash  bridge_left_turn.bash  build_zzz.sh  dbg_env_setup.md  default.rviz  export_path.sh  export_python_path_096.sh  export_python_path_097.sh  export_python_path_098.sh  l_carla_ros_bridge.sh  l_main.sh  l_rviz.sh  load_capture.sh  load_main_planning.sh  load_sensors.sh  main.bash  nq.txt  nq_save.txt  perf-test.bash  redmkz_demo.calib.json  redmkz_demo.launch  requirements.txt  run_srunner.sh  test.launch  test.py  (+3 more)
src/control/latlon_controllers/: CMakeLists.txt  package.xml  setup.py
src/control/latlon_controllers/nodes/: pure_persuit
src/control/latlon_controllers/src/zzz_control_latlon_controllers/: __init__.py  lateral.py  longitudinal.py  longitudinal_calibration.py  main.py
src/driver/actuators/dataspeed_adapter/: CMakeLists.txt  README.md  package.xml  setup.py
src/driver/actuators/dataspeed_adapter/nodes/: convert_mkz_command  convert_mkz_report
src/driver/datasets/mcity/: CMakeLists.txt  package.xml  setup.py
src/driver/datasets/mcity/scripts/: convert_bag
src/driver/obu_trafficlight/: CMakeLists.txt  package.xml
src/driver/obu_trafficlight/launch/: obu_trafficlight.launch
src/driver/obu_trafficlight/src/: main.cc
src/driver/protocol/: CMakeLists.txt  package.xml
src/driver/protocol/action/: LoadMap.action
src/driver/protocol/msg/: AuxiliaryReport.msg  ControlReport.msg  LaneState.msg  MapState.dep.msg  MapState.msg  ObstacleData.msg  ObstacleDataArray.dep.msg  RigidBodyState.msg
src/driver/protocol/src/zzz_driver_msgs/: utils.py
src/driver/radar/us_radar/: CMakeLists.txt  conf.yaml  interface.yaml  package.xml
src/driver/radar/us_radar/include/: CanFrame.h  byte.h  usRadar.h
src/driver/radar/us_radar/launch/: usradar.launch
src/driver/radar/us_radar/nodes/: us_radar_node.cpp
src/driver/radar/us_radar/src/: XUdp.cpp  byte.cc
src/driver/sensors/astuff_adapter/: CMakeLists.txt  package.xml
src/driver/sensors/astuff_adapter/nodes/: convert_topic
src/localization/global_localization/: CMakeLists.txt  package.xml
src/localization/global_localization/launch/: global_fusion_M2_2.launch  global_fusion_M2_old.launch  global_fusion_oxford.launch  global_fusion_oxford_2.launch  test_M2_pos_2.launch  test_oxford_pos.launch  test_oxford_pos_2.launch
src/localization/global_localization/rviz_cfg/: locazalition.rviz  locazalition_xiaoche.rviz
src/localization/global_localization/src/: global_fusion_m2.cpp  global_fusion_m2_2.cpp  global_fusion_oxford.cpp  global_fusion_oxford_2.cpp
src/map/apollo_hdmap/: CMakeLists.txt  package.xml
src/map/baidu_static_map/: CMakeLists.txt  package.xml
src/map/baidu_static_map/launch/: baidu_static_map.launch
src/map/baidu_static_map/src/: main.cc
src/meta/all/: CMakeLists.txt  package.xml
src/meta/msgs/: CMakeLists.txt  package.xml
src/navigation/map_provider/baidu_static_map/: CMakeLists.txt  package.xml
src/navigation/map_provider/baidu_static_map/include/: CVshow.hpp  Utm.hpp  hdmapConcept.h  hdmapEngine.h  routeSelectingWindow.h
src/navigation/map_provider/baidu_static_map/node/: export_path.cpp  fixed_path.cpp  (+1 more)
src/perception/detection/lidar_detectors/: CMakeLists.txt  README.md  package.xml  setup.py
src/perception/detection/lidar_filters/: CMakeLists.txt  README.md  package.xml  setup.py
src/perception/global_ukf_track/: CMakeLists.txt  package.xml
src/perception/global_ukf_track/include/: HungarianAlg.h  assignment.h  assignment.hpp  lidar_track.h  lidar_track_ros.h  trajectory.h
src/perception/global_ukf_track/launch/: global_ukf_track.launch
src/perception/global_ukf_track/src/: HungarianAlg.cpp  lidar_track.cc  lidar_track_ros.cc  main.cc
src/perception/lidar_cnn_seg_detect_trt/: CMakeLists.txt  README.md  package.xml
src/perception/lidar_cnn_seg_detect_trt/include/: benchmark.h  bounding_line.h  cluster2d.h  cnn_segmentation.h  detected_object.h  feature_generator.h  feature_generator_cuda.h  prekernel.h  sem_object.h  shm_object.h  time_point.h  util.h
src/perception/lidar_cnn_seg_detect_trt/launch/: lidar_cnn_seg_detect_trt.launch
src/perception/lidar_cnn_seg_detect_trt/node/: cnn_segmentation.cpp  lidar_cnn_seg_detect_node.cpp
src/perception/lidar_cnn_seg_detect_trt/src/: cluster2d.cpp  feature_generator.cpp  feature_generator_cuda.cu  prekernel.cu  sem_object.cpp
src/perception/lidar_point_pillars_detect_trt/: CMakeLists.txt  README.md  package.xml
src/perception/lidar_point_pillars_detect_trt/include/: benchmarch.h  common.h  feature_generator.h  pointpillars.h  postprocess.h  postprocess_cuda.h  time_point.h
src/perception/lidar_point_pillars_detect_trt/launch/: lidar_pointpillars_detect_trt.launch
src/perception/lidar_point_pillars_detect_trt/node/: lidar_pointpillars_detect_node.cpp  pointpillars.cpp
src/perception/lidar_point_pillars_detect_trt/src/: feature_generator.cpp  postprocess.cpp  postprocess.cu
src/perception/protocol/: CMakeLists.txt  package.xml
src/perception/protocol/msg/: BoundingBox2D.msg  DetectionBox.msg  DetectionBox2D.msg  Dimension.msg  Dimension2D.msg  Dimension2DWithCovariance.msg  DimensionWithCovariance.msg  ObjectClass.msg  ObjectSignals.msg  Pose2DWithCovariance.msg  TrackingBox.msg  TrafficLightDetection.msg  TrafficLightDetectionArray.msg  VehicleSignals.msg
src/perception/tracking/object_filters/: CMakeLists.txt  README.md  package.xml  setup.py
src/tools/libtrt/: CMakeLists.txt  package.xml
src/tools/point_convert/src/: CMakeLists.txt  cloud_node.cc  rawdata.cc  rawdata_orgnized.cc
src/tools/tensorrt_cpp/trt_build/: CMakeLists.txt  builder.cpp  config.yaml
src/tools/tensorrt_cpp/trt_infer/: CMakeLists.txt  config.yaml  inference.h  inference_factory.h
src/visualization/rviz/detection_visualizer/: CMakeLists.txt  package.xml
(+986 files in other folders)
