<package format="2">
  <name>zzz_control_latlon_controllers</name>
  <version>0.1.0</version>
  <description>
    Controllers based on latitudinal(steer) and longitudinal(throttle) behavior
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
