<package format="2">
  <name>zzz</name>
  <version>0.1.0</version>
  <description>
    This is a meta package that wraps up all dependencies of zzz.
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>zzz_msgs</build_depend>

  <build_depend>zzz_cognition_object_locator</build_depend>
</package>
