<package>
    <name>trt</name>
    <version>1.0.1</version>
    <description>The trt package</description>
    <maintainer email="hongayn.pei@novauto.com.cn">phy</maintainer>
    <license>BSD</license>
    <author email="hongayn.pei@novauto.com.cn">phy</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
</package>
