<package>
  <name>zzz_driver_datasets_mcity</name>
  <version>0.1.0</version>
  <description>
    Driver for dataset input from MCity dataset
  </description>
  <license>BSD</license>
  <maintainer email="zyxin@umich.edu">Yuanxin Zhong</maintainer>
  <author email="zyxin@umich.edu">Yuanxin Zhong</author>

  <url type="website">https://github.com/cmpute/zzz</url>
  <url type="repository">https://github.com/cmpute/zzz</url>
  <url type="bugtracker">https://github.com/cmpute/zzz/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python-tqdm</run_depend>
</package>