<?xml version="1.0"?>
<package format="2">
  <name>us_radar</name>
  <version>0.0.1</version>
  <description>ultra sonic radar node</description>
  <maintainer email="yong.zhu@novauto.com.cn">zhu yong</maintainer>
  <license>GPLv2</license>
  <author email="yong.zhu@novauto.com.cn">zhu yong</author>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>us_radar_msgs</build_depend>
  <exec_depend>us_radar_msgs</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
